tests/paczka1/small_fuzzy/81047464.err
Error in line 7: A158 S160 86,3
Error in line 9: 2vq9mIyzKaA A603 62,7
